--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
-flask
-gunicorn
-opencv-python-headless==4.8.1.78
-pillow
-pyzbar
+from flask import Flask
+app = Flask(__name__)
+
+@app.route("/")
+def home():
+    return "Hola mundo!"
+
+if __name__ == "__main__":
+    app.run(host="0.0.0.0", port=8080)
