--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
 from flask import Flask
+from flask_cors import CORS
+
 app = Flask(__name__)
+CORS(app)
 
 @app.route("/")
 def home():
-    return "Hola mundo!"
+    return "¡Hola, Railway funciona!"
 
 if __name__ == "__main__":
-    app.run(host="0.0.0.0", port=8080)
+    import os
+    port = int(os.environ.get("PORT", 5000))
+    app.run(host="0.0.0.0", port=port)
